# pandora_box

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
pandora/: convolution.h  image.h
pandora/filters/: gaussian.h
pandora/filters/details/: gaussian_naive.h  gaussian_separable.h
test/: CMakeLists.txt  gaussian_filter_tests.cpp  main.cpp
